--- a/docker/pvserver/Dockerfile
+++ b/docker/pvserver/Dockerfile
@@ -48,4 +48,4 @@ VOLUME /pvServer/userAuthentication/users
 
 
 CMD python pvServer.py
-EXPOSE  5000 5001 5064 5065 8001 27017
+EXPOSE  5000 5001 5064 5065 8001 27017 801 48898
