in pvServer added dependancy on adsServer

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -32,6 +32,10 @@ services:
     volumes:
       - ./certificates:/certificates/
       - ./users:/pvServer/userAuthentication/users
+    #links:
+    #  - adsserver
+    depends_on:
+      - adsserver
   adsserver:
     env_file: .env
     build:
