--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,6 +18,8 @@ services:
     network_mode: host
   pvserver:
     env_file: .env
+    environment:
+      - DATABASE1=127.0.0.1:27017
     build:
       context: ./
       args: # Environment variables available at build-time
@@ -78,3 +80,29 @@ services:
     network_mode: host
     volumes:
       - ./certificates:/certificates/
+  
+  loadsavedb:
+    env_file: .env
+    image: 'mongo'
+    container_name: 'loadsavedb-container'
+    volumes:
+      - ./db:/data/db/
+    ports:
+      - 27017:27017
+      - 27018:27018
+      - 27109:27109
+  # initializedb:
+  #   env_file: .env
+  #   build:
+  #     context: ./
+  #     args: # Environment variables available at build-time
+  #               - http_proxy
+  #               - https_proxy
+  #               - no_proxy
+  #     dockerfile: docker/loadSaveDbInit/Dockerfile
+  #   tty: true
+  #   stdin_open: true
+  #   depends_on:
+  #     - loadsavedb
+
+
