--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     network_mode: host
     env_file: .env
   pvserver:
+    environment:
+      - DATABASE1=127.0.0.1:27017
     build:
       context: ./
       args: # Environment variables available at build-time
@@ -76,3 +78,13 @@ services:
     environment:
             - REACT_APP_PyEpicsServerPORT=5001
             - REACT_APP_EnableLogin=false
+  loadsavedb:
+    env_file: .env
+    image: 'mongo'
+    container_name: 'loadsavedb-container'
+    volumes:
+      - ./db:/data/db/
+    ports:
+      - 27017:27017
+      - 27018:27018
+      - 27109:27109
