split mongosetup scripts from alarm handler

--- a/docker/mongoSetup/Dockerfile
+++ b/docker/mongoSetup/Dockerfile
@@ -3,9 +3,9 @@ FROM python:3.9.0a3-buster
 # Install python dependencies
 WORKDIR /usr/src/app
 
-COPY alarmHandlerServer/src/python/requirements.txt ./
+COPY mongoSetup/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY alarmHandlerServer/src/python/mongoSetup/initDBData /usr/src/app/initDBData
-COPY alarmHandlerServer/src/python/mongoSetup/*.py ./
+COPY mongoSetup/initDBData /usr/src/app/initDBData
+COPY mongoSetup/*.py ./
 CMD ["python","main.py"]
