--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -108,6 +108,10 @@ services:
     network_mode: host
     tty: true
     stdin_open: true
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
 
   mongo1:
     image: mongo:4.2.3-bionic
