--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,7 +16,7 @@ services:
       - ./ReactApp/src:/frontendserverAppDev/src
       - ./ReactApp/public:/frontendserverAppDev/public
     restart: always
-    network_mode: host
+    network_mode: "host"
   pvserver:
     env_file: .env
     environment:
@@ -30,7 +30,7 @@ services:
         - no_proxy
       dockerfile: docker/pvserver/Dockerfile
     restart: always
-    network_mode: host
+    network_mode: "host"
     tty: true
     stdin_open: true
     volumes:
@@ -50,7 +50,7 @@ services:
         - no_proxy
       dockerfile: docker/pvserver/Dockerfile
     restart: always
-    network_mode: host
+    network_mode: "host"
     volumes:
       - ./certificates:/certificates/
   demoioc:
@@ -64,7 +64,7 @@ services:
     tty: true
     stdin_open: true
     restart: always
-    network_mode: host
+    network_mode: "host"
   styleguideserver:
     env_file: .env
     environment:
@@ -79,7 +79,7 @@ services:
         - no_proxy
       dockerfile: docker/styleguideserver/Dockerfile
     restart: always
-    network_mode: host
+    network_mode: "host"
     volumes:
       - ./certificates:/certificates/
   alarmhandlerserver:
@@ -88,6 +88,8 @@ services:
       dockerfile: docker/alarmHandlerServer/Dockerfile
     hostname: alarmhandlerserver
     restart: always
+    depends_on:
+      - mongosetup
     network_mode: "host"
     stdin_open: true
     tty: true
@@ -105,59 +107,74 @@ services:
                 - https_proxy
                 - no_proxy
       dockerfile: docker/loadSaveDbInit/Dockerfile
-    network_mode: host
+    network_mode: "host"
     tty: true
     stdin_open: true
     depends_on:
-      - mongo1
-      - mongo2
-      - mongo3
+      - mongosetup
 
   mongo1:
     image: mongo:4.2.3-bionic
     hostname: mongo1
     restart: always
-    ports:
-      - 27017:27017
-    env_file: .env
+    network_mode: "host"
+    env_file: mongoSetup/mongosetup.env
     logging:
       driver: "none"
     volumes:
       - "mongo-db-data1:/data/db"
       - "mongo-db-configdb1:/data/configdb"
-    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "devrs"]
+    entrypoint:
+      [
+        "/usr/bin/mongod",
+        "--bind_ip_all",
+        "--port",
+        "27017",
+        "--replSet",
+        "devrs",
+      ]
 
   mongo2:
     image: mongo:4.2.3-bionic
     hostname: mongo2
     restart: always
-    depends_on:
-      - mongo1
-    ports:
-      - 27018:27017
-    env_file: .env
+    network_mode: "host"
+    env_file: mongoSetup/mongosetup.env
     logging:
       driver: "none"
     volumes:
       - "mongo-db-data2:/data/db"
       - "mongo-db-configdb2:/data/configdb"
-    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "devrs"]
+    entrypoint:
+      [
+        "/usr/bin/mongod",
+        "--bind_ip_all",
+        "--port",
+        "27018",
+        "--replSet",
+        "devrs",
+      ]
 
   mongo3:
     image: mongo:4.2.3-bionic
     hostname: mongo3
     restart: always
-    depends_on:
-      - mongo2
-    ports:
-      - 27019:27017
-    env_file: .env
+    network_mode: "host"
+    env_file: mongoSetup/mongosetup.env
     logging:
       driver: "none"
     volumes:
       - "mongo-db-data3:/data/db"
       - "mongo-db-configdb3:/data/configdb"
-    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "devrs"]
+    entrypoint:
+      [
+        "/usr/bin/mongod",
+        "--bind_ip_all",
+        "--port",
+        "27019",
+        "--replSet",
+        "devrs",
+      ]
 
   mongosetup:
     build:
@@ -173,22 +190,20 @@ services:
     stdin_open: true
     tty: true
     env_file:
-      - .env
-      - alarmHandlerServer/alarmHandler.env
+      - mongoSetup/mongosetup.env
 
   mongo-express:
     image: mongo-express:0.54.0
     hostname: mongo-express
     restart: always
-    ports:
-      - 8081:8081
+    network_mode: "host"
     depends_on:
       - mongosetup
-    env_file: .env
+    env_file: mongoSetup/mongosetup.env
     logging:
       driver: "none"
     environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo1
+      - ME_CONFIG_MONGODB_SERVER=localhost
 
 volumes:
   mongo-db-data1:
