--- a/docker/alarmHandlerServer/Dockerfile
+++ b/docker/alarmHandlerServer/Dockerfile
@@ -48,5 +48,6 @@ WORKDIR /usr/src/app
 RUN ln -s /epics/demoAlarmsIOC/iocBoot/iocdemoAlarmsIOC/start_tmux_st.cmd /usr/src/app/startDemoIOC.cmd
 RUN ln -s /epics/alarmIOC/iocBoot/iocalarmIOC/start_tmux_st.cmd /usr/src/app/startAlarmIOC.cmd
 
+COPY alarmHandlerServer/src/python/initDBData /usr/src/app/initDBData
 COPY alarmHandlerServer/src/python/*.py ./
 CMD ["python","main.py"]
