changed dev mongodb url to localhost

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,9 +20,9 @@ services:
   pvserver:
     env_file: .env
     environment:
-      - ALARM_DATABASE=127.0.0.1:27017
+      - ALARM_DATABASE=localhost
       - ALARM_DATABASE_REPLICA_SET_NAME=devrs
-      - LOADSAVE_DATABASE=127.0.0.1:27017
+      - LOADSAVE_DATABASE=localhost
       - LOADSAVE_DATABASE_REPLICA_SET_NAME=devrs
     build:
       context: ./
@@ -103,7 +103,7 @@ services:
   initializeloadsavedb:
     env_file: .env
     environment:
-      - LOADSAVE_DATABASE=127.0.0.1:27017
+      - LOADSAVE_DATABASE=localhost
       - LOADSAVE_DATABASE_REPLICA_SET_NAME=devrs
     build:
       context: ./
