--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -70,7 +70,7 @@ services:
     environment:
           - REACT_APP_PyEpicsServerBASEURL=http://127.0.0.1
           - REACT_APP_PyEpicsServerPORT=5001
-          - REACT_APP_EnableLogin=false
+          - enableLogin=false
           - DEMO_ARCHIVER=http://localhost:17668
           
           
